<resources>
    <string name="app_name">Dodododo Dominoes</string>
    <string name="welcome">Bienvenue chez Dominoes Pidza!</string>
    <string name="info_cli">Information du client :</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="add">Adresse :</string>
    <string name="code_pos">Cope Dostal :</string>
    <string name="tel">Telephone :</string>
    <string name="info_com">Information sur la copmmande</string>
    <string name="pizz">Pidz :</string>
    <string name="prix">Prix :</string>
    <string name="send">Envoyer</string>
    <string name="a">Afficher sur la carte</string>
    <string name="swwend">Votre commande va être livrée par la succursale :</string>
    <string name="notel">Numéro de téléphone de cette succursale :</string>
    <string name="ville">Ville :</string>
    <string name="retour">Retour</string>
</resources>